<resources>
    <string name="app_name">TWiJ_Projekt</string>
    <string name="lecture_choose">Wybierz numer wykładu:</string>
    <string name="first_button">Pierwsze</string>
    <string name="last_button">Ostatnie</string>
    <string name="slide_viewer">Slide Viewer</string>
    <string name="code_viewer">Code Viewer</string>
    <string name="java_quiz">Java Quiz</string>
    <string name="java_tools">Java Tools</string>
    <string name="read_button">Czytaj</string>
    <string name="lab_choose">Wybierz labolatorium</string>
    <string name="code_choose">Wybierz numer kodu źródłowego</string>
    <string name="go_button">Przejdź</string>
    <string name="url_hint">Wprowadź adres strony</string>
    <string name="reset_quiz_button">Rozpocznij od nowa</string>
    <string name="submit_quiz_button">Zatwierdź</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="welcome">Witamy</string>
    <string name="login_info">Zaloguj się podając poprawne informacje</string>
    <string name="login_button">Zaloguj</string>
    <string name="register_info">Zarejestruj się podając poprawne informacje</string>
    <string name="register_welcome">Utwórz konto</string>
    <string name="register_button">Zarejestruj</string>
    <string name="new_account">Nie masz konta? Rejestracja tutaj.</string>
    <string name="have_account">Posiadasz już konto? Zaloguj się tutaj.</string>
    <string name="profile">Profil</string>
    <string name="logout">Wyloguj</string>
    <string name="current_user_info">Informacje o bieżącym użytkowniku</string>
    <string name="api_test">API QUIZ</string>
    <string name="change_password">Zmiana hasła</string>
    <string name="change_password_info">Jeżeli chcesz zmienić hasło wypełnij prawidłowo poniższe pola.</string>
    <string name="actual_password">Aktualne hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="confirm_new_password">Potwierdź nowe hasło</string>
    <string name="change_password_text_info">Chcesz zmienić hasło ? Kliknij tutaj.</string>
    <string name="change_password_button">Zmień hasło</string>
    <string name="back_button">Powrót</string>
</resources>