<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner_lecture_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="111dp" />

    <ImageView
        android:id="@+id/iv_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner_lecture_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="207dp"
        app:srcCompat="@drawable/w01_1" />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="85dp"
        android:layout_toEndOf="@+id/btn_left"
        app:cornerRadius="28dp"
        android:text="&gt;" />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="84dp"
        app:cornerRadius="28dp"
        android:text="&lt;" />

    <Button
        android:id="@+id/btn_first_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="18dp"
        android:text="@string/first_button" />

    <Button
        android:id="@+id/btn_last_image"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="18dp"
        android:layout_toEndOf="@+id/btn_first_image"
        android:text="@string/last_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="27dp"
        android:text="@string/lecture_choose" />


</RelativeLayout>